# iridium-vm

./: Cargo.toml  README.md  test.asm
src/: cli.yml  instruction.rs  main.rs  vm.rs
src/assembler/: directive_parser.rs  instruction_parser.rs  label_parser.rs  mod.rs  opcode_parser.rs  operand_parser.rs  program_parser.rs  register_parser.rs
src/repl/: mod.rs
test_code/: test.asm  test2.asm  test_string.asm
