[package]
name = "iridium-vm"
version = "0.1.0"
authors = ["Jacinto Mba Cantero <j.mba@kentech-sp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "4.0.0"
clap = {version = "3.1.18", features= ["yaml"]}
log = "0.4.17"
env_logger = "0.9.0"
byteorder = "1"